# clairvoyance

./: pyproject.toml  readme
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yaml  test.yaml
clairvoyance/: __init__.py  main.py
clairvoyance/test/: main_test.py
